--- a/appendices.tex
+++ b/appendices.tex
@@ -38,6 +38,12 @@ APPENDIX\\
 \section{CASE STUDY SOURCE CODE} 
 \label{app:case}
 
+\subsection{SQL CODE - DATA TABLES}
+    \lstinputlisting[language=SQL, frame=single, label=src:rawSQL]{source/raw_tables.sql}
+
+\subsection{SQL CODE - SCORE TABLES}
+    \lstinputlisting[language=SQL, frame=single, label=src:scoreSQL]{source/score_tables.sql}
+    
 \subsection{R CODE - QUALITY} 
 \scriptsize{
 \begin{lstlisting}[language=R]
