--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -436,7 +436,7 @@
                     Scheduled Start Date & Date & Required \\
                     \myrowcolour%
                     Scheduled Finish Date & Date & Required \\
-                    Actual Start Date & Date  & Required \\
+                    Actual Start Date & Date  & Optional \\
                     \myrowcolour%
                     Actual Finish Date & Date  & Required \\
                     
