--- a/appendices.tex
+++ b/appendices.tex
@@ -38,11 +38,34 @@ APPENDIX\\
 \section{CASE STUDY SOURCE CODE} 
 \label{app:case}
 
+%% set appendix to single space for th source code
+\linespread{1.0}
+
+%% options for lists
+\lstset{ %
+  basicstyle=\small,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  commentstyle=\color{ForestGreen},    % comment style
+  frame=single,                    % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{gray}, % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  tabsize=4,                       % sets default tabsize to 2 spaces
+}
+
 \subsection{SQL CODE - DATA TABLES}
-    \lstinputlisting[language=SQL, frame=single, label=src:rawSQL]{source/raw_tables.sql}
+    \lstinputlisting[language=SQL, label=src:rawSQL]{source/raw_tables.sql}
 
 \subsection{SQL CODE - SCORE TABLES}
-    \lstinputlisting[language=SQL, frame=single, label=src:scoreSQL]{source/score_tables.sql}
+    \lstinputlisting[language=SQL, label=src:scoreSQL]{source/score_tables.sql}
     
 \subsection{R CODE - QUALITY} 
 \scriptsize{
