more SQL updates, new sql file

--- a/appendices.tex
+++ b/appendices.tex
@@ -67,6 +67,9 @@ APPENDIX\\
 \subsection{SQL CODE - SCORE TABLES}
     \lstinputlisting[language=SQL, label=src:scoreSQL]{source/score_tables.sql}
     
+\subsection{SQL CODE - FINAL SCORE TABLES}
+    \lstinputlisting[language=SQL, label=src:overallscoreSQL]{source/overall_score_tables.sql}
+    
 \subsection{R CODE - QUALITY} 
 \scriptsize{
 \begin{lstlisting}[language=R]
