--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -1,6 +1,16 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
+\section{FUTURE WORK}
+
+Due to the number of issues with surveys.  One area of future work would be indentifying
+a general set of questions that would best fit MPI.  This set would have to include
+the best number of questions, order of questions and wording of questions.  Therefore,
+any new organization would not have to determine their own survey, but rather just use the
+predetermined set of questions.  It would even be advantageous to build a software system to
+handle the survey distribution and collection.  Ideally, the results would automatically be
+inserted into the appropriate database tables for MPI scoring. 
+
 % new section
 \section{CONCLUSION}
 
