--- a/references.bib
+++ b/references.bib
@@ -132,8 +132,6 @@
     publisher = {IEEE Computer Society Press},
     address = {Los Alamitos, CA, USA},
 } 
-
-
 @inproceedings{Buse2010,
     author = {Buse, Raymond P.L. and Zimmermann, Thomas},
     title = {Analytics for Software Development},
@@ -185,6 +183,16 @@
     keywords={project management;risk management;software reliability;failure prevention;project management;risk management;software failure;software projects management;Business;Companies;Computer crashes;Costs;FAA;History;Information technology;Investments;Merchandise;Programmable control},
     doi={10.1109/MSPEC.2005.1502528},
     ISSN={0018-9235}
+}
+@book{Cowles2015,
+    author = {Ernest Cowles and Edward Nelson},
+    title = {An Introduction to Survey Research},
+    year = {2015},
+    month = {January},
+    isbn = {978-1-60649-818-7},
+    edition = {1st},
+    publisher = {Business Expert Press},
+    address = {New York, NY, USA},
 }
 @techreport{CMMI,
     author = { {CMMI Product Team} },
@@ -843,6 +851,16 @@
 	publisher =	"Addison-Wesley",
 	year =		"2001",
 	edition = 6
+}
+@book{Snijkers2013,
+    title={Designing and Conducting Business Surveys},
+    author={Snijkers, G. and Haraldsen, G. and Jones, J. and Willimack, D.},
+    isbn={9781118447918},
+    lccn={2012022969},
+    series={Wiley Series in Survey Methodology},
+    year={2013},
+    edition = {2},
+    publisher={John Wiley \& Sons}
 }
 @mastersthesis{Snipes2013,
     title={Evaluating Developer Responses to Gamification of Software Development Practices.},
