--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -520,7 +520,6 @@
             
             
 
-
         \subsubsection{SCHEDULE}  
             Delivery of software in a timely manner is an essential part of being a 
             successful SDO.  Being able to meet scheduled deadlines is a sign of accurate
@@ -694,15 +693,35 @@
             
 
         \subsubsection{OVERALL MPI SCORE}
-            One complete overall score cannot be successful without including 
-            information from various aspects of the software development 
-            organization.  Therefore, the previous results
-            are combined to provide one overall score.
+            In order to accomplish the single number score that MPI requires,
+            the 5 element scores must be combined. The combination of the scores
+            is a weighted average.  The weights can be set based upon the 
+            priority of the SDO.  Thus, the overall MPI score is calculated as below.
+            
             \[
                 MPI =\sum\limits^n_{i=1} w_i S_i \text{ where } \sum\limits^n_{i=1} w_i = 1
             \]
 
 
+    \subsection{CORRELATIONS IN MPI}
+        It is possible that 2 or more of the 5 elements of MPI will be correlated.  This means that
+        one of the elements can be predicted based upon the values of the other elements.  Although
+        it is possible for correlation to occur between any of the elements, the satisfaction element
+        is an obvious element which deserves attention due to the human involvement of the surveys. 
+        If a schedule is missed or an important requirement dropped, that could have a large negative
+        effect on the satisfaction surveys.  The same could be said of quality or availability with regard to 
+        the satisfaction.  However, satisfaction is not the only potentially correlated element.  It is also
+        possible that a decrease in quality could result in unexpected downtime which could have a
+        negative result on availability.  Similarly, if requirements are added, it is possible the schedule
+        will be negatively impacted.  Also, if requirements are dropped, the quality might suffer due
+        to missing functionality.  
+        
+        It is impossible to know which or if correlations will always exist.  Thus it is necessary to
+        check for correlations after determining element and overall MPI scores.  
+        If correlation is determined, the element should not be dropped but rather be weighted less than
+        the other elements.  This technique keeps the most data available but lessens the importance of
+        the correlated element. 
+        
     \subsection{SENSITIVITY OF MPI}
     \label{sub:sensitivity}
         
@@ -710,76 +729,83 @@
         will be analyzed.
         For more on sensitivity analysis in statistical modeling, see \cite{Saltelli2000}.
 
-    \subsection{IMPORTANCE OF MPI}
+    \subsection{MPI COMPARED}
     
-        Earlier, in the introduction section \ref{subsub:softwareanalytics}, 3 main focus 
-        areas and 3 important questions for software
-        analytics were presented.  Table \ref{tab:focusareas} provides a explanation of how MPI addresses
-        each focus area.  
-        As can be seen, MPI clearly addresses the 3 main focus areas of software analytics.  MPI does provide
-        any mechanisms for improving the focus areas, but it provides a consistent mechanism to measure
-        the focus areas. 
+        \subsubsection{MPI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
+    
+            Earlier, in the introduction section \ref{subsub:softwareanalytics}, 3 main focus 
+            areas  for software
+            analytics were presented.  Table \ref{tab:focusareas} provides a explanation of how MPI addresses
+            each focus area.  
+            As can be seen, MPI clearly addresses the 3 main focus areas of software analytics.  MPI does not provide
+            any mechanisms for improving the focus areas, but it provides a consistent mechanism to measure
+            the focus areas. 
+            
+            \begin{longtable}{p{3cm}p{11cm}}
+                \toprule%
+                 \centering%
+                 {\bfseries Focus Area}
+                 & {\bfseries Why MPI?} \\
+                
+                \cmidrule[0.4pt](r{0.125em}){1-1}%
+                \cmidrule[0.4pt](lr{0.125em}){2-2}%
+                % \midrule
+                \endhead
+                
+                User Experience & One of the 5 elements of MPI is satisfaction.  While not all of the questions focus solely on the user experience, the entire purpose of the survey is to determine if the user is satisfied
+                with the software product. Does it have the correct features? Are new features added in a timely manner? Of course, specific survey questions can be created to focus solely on a certain user experience. \\
+                \myrowcolour%
+                Quality & Again, one of the 5 elements specifically focuses on quality.  MPI provides a single number
+                to measure quality.  Therefore, it is easy to track changes in quality over time.  MPI does not address
+                how to improve the quality, but without a consistent measurement, it would be impossible to determine the change in quality. \\
+                Development Productivity & The combination of MPI elements, schedule and requirements, provide an 
+                indication of development productivity. The schedule element measures the productivity
+                related to estimated schedule. Similarly, the requirement element measures the amount of
+                work actually being completed.  \\
+                
+                \bottomrule
+                
+                \caption{SOFTWARE ANALYTICS FOCUS AREAS AND MPI}
+                \label{tab:focusareas}
+            \end{longtable}
         
-        \begin{longtable}{p{3cm}p{11cm}}
-            % pairs: absolute number (percentage)
-            
-            \toprule%
-             \centering%
-             {\bfseries Focus Area}
-             & {\bfseries Why MPI?} \\
-            
-            \cmidrule[0.4pt](r{0.125em}){1-1}%
-            \cmidrule[0.4pt](lr{0.125em}){2-2}%
-            % \midrule
-            \endhead
-            
-            User Experience & One of the 5 elements of MPI is satisfaction.  While not all of the questions focus solely on the user experience, the entire purpose of the survey is to determine if the user is satisfied
-            with the software product. Does it have the correct features? Are new features added in a timely manner? Of course, specific survey questions can be created to focus solely on a certain user experience. \\
-            \myrowcolour%
-            Quality & Again, one of the 5 elements specifically focuses on quality.  MPI provides a single number
-            to measure quality.  Therefore, it is easy to track changes in quality over time.  MPI does not address
-            how to improve the quality, but without a consistent measurement, it would be impossible to determine the change in quality. \\
-            Development Productivity & The combination of MPI elements, schedule and requirements, provide an 
-            indication of development productivity. The schedule element measures the productivity
-            related to estimated schedule. Similarly, the requirement element measures the amount of
-            work actually being completed.  \\
-            
-            \bottomrule
-            
-            \caption{SOFTWARE ANALYTICS FOCUS AREAS AND MPI}
-            \label{tab:focusareas}
-        \end{longtable}
         
+        \subsubsection{MPI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
+            Also, section \ref{subsub:softwareanalytics} mentions 3 important questions that
+            software analytics must address.  Table \ref{tab:questions} presents the 3 questions
+            and a description of how MPI addresses that specific question.  It is clear
+            that MPI addresses the questions.  MPI is a beneficial technique of software
+            analytics when applied to software development organizations.
         
-        \begin{longtable}{p{4cm}p{10cm}}
-            % pairs: absolute number (percentage)
-            
-            \toprule%
-             \centering%
-             {\bfseries Question}
-             & {\bfseries Why MPI?} \\
-            
-            \cmidrule[0.4pt](r{0.125em}){1-1}%
-            \cmidrule[0.4pt](lr{0.125em}){2-2}%
-            % \midrule
-            \endhead
-            
-            How much better is my model performing than a naive strategy, such as guessing? & MPI 
-            provides consistency which may not exist without it.  Therefore, MPI removes the 
-            guesswork of measuring a software development organization. \\
-            \myrowcolour%
-            How practically significant are the results? & The MPI score is consistent
-            and easy to comprehend.  Thus comparison with past performance is quick 
-            and simple.  This is a significant advantage for software 
-            development organizations. \\
-            How sensitive are the results to small changes in one or more of the inputs? & 
-            The question was extensively addressed in section \ref{sub:sensitivity}.  It appears MPI is
-            not overly sensitive to small changes in the inputs.\\
-            
-            \bottomrule
-            
-            \caption{IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND MPI}
-            \label{tab:questions}
-        \end{longtable}
+            \begin{longtable}{p{4cm}p{10cm}}
+                % pairs: absolute number (percentage)
+                
+                \toprule%
+                 \centering%
+                 {\bfseries Question}
+                 & {\bfseries Why MPI?} \\
+                
+                \cmidrule[0.4pt](r{0.125em}){1-1}%
+                \cmidrule[0.4pt](lr{0.125em}){2-2}%
+                % \midrule
+                \endhead
+                
+                How much better is my model performing than a naive strategy, such as guessing? & MPI 
+                provides consistency which may not exist without it.  Therefore, MPI removes the 
+                guesswork of measuring a software development organization. \\
+                \myrowcolour%
+                How practically significant are the results? & The MPI score is consistent
+                and easy to comprehend.  Thus comparison with past performance is quick 
+                and simple.  This is a significant advantage for software 
+                development organizations. \\
+                How sensitive are the results to small changes in one or more of the inputs? & 
+                The question was extensively addressed in section \ref{sub:sensitivity}.  It appears MPI is
+                not overly sensitive to small changes in the inputs.\\
+                
+                \bottomrule
+                
+                \caption{IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND MPI}
+                \label{tab:questions}
+            \end{longtable}
 
 \end{document}
