--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -9,13 +9,14 @@ an SDO within a large financial institution.
 The data collection was from 2008 to present. This section will provide the analysis performed and the MPI scores of that data. The data is incomplete but that is realistic of most oganizations.  Currently, the data
 consists of availability, quality, and schedule.  Satisfaction and Requirements are being obtained. An example of the initial analysis is included in \cref{app:case}.
 
-\subsection{WITHOUT HISTORICAL DATA}
-
-An MPI calculation with default values.
-
 \subsection{WITH HISTORICAL DATA}
 
-How to create better formulas with historical data.
+An MPI calculation analyzing historical performance.
+
+\subsection{WITHOUT HISTORICAL DATA}
+
+An MPI calculation with default values for quality, schedule and requirements.
+
 
   
 \end{document}
