--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -503,22 +503,26 @@
                 are more important than others, the formula could be
                 easily modified to include weighting.  
             
-                Mathematically, the following is an algorithm to calculate the 
-                satisfaction element score
-                of MPI.
+                First the score for each question needs to be calculated.
+                
                 \[
-                    S_2 = \frac{\sum^n_{i=1}\left( \frac{\sum^m_{j=1}a_{ij}- \frac{min + max}{2}}{m}  \right)}{n}
+                    S_{3_i} = \sum^n_{i=1}\left( k \times \frac{ \sum^m_{j=1}a_{ij}-\frac{min + max}{2}}{m} \right)
                 \]
                 
                 \begin{itemize}
-                    \item $a_{i j}$ answer to question $j$ for app $i$
-                    \item $m$ number of questions with equal weights
-                    \item $n$ number of apps
+                    \item $a_{ij}$ answer to question $i$ for respondent $j$
+                    \item $n$ number of questions
+                    \item $m$ number of respondents
                     \item $min$ minimum score for a question
                     \item $max$ maximum score for a question
                 \end{itemize}
-            
-            
+                
+                Then the satisfaction score is calculated as below.  Use a weighted average
+                to combine the question scores.
+                
+                \[
+                    S_{3} = \sum\limits^n_{i=1} w'_i S_{3_i} \text{ where } \sum\limits^n_{i=1} w'_i = 1
+                \]
 
         \subsubsection{SCHEDULE}  
             Delivery of software in a timely manner is an essential part of being a 
@@ -529,18 +533,6 @@
             30\% \cite{Jorgensen2014}.  Thus it is important to score SDOs on accurate
             schedule adherence. Without tracking and measuring schedule adherence, it will
             not improve.  
-            
-            The score is based upon the historical deviance of estimates for
-            projects.  The top score of
-            100 will be obtained when the schedule is met exactly.  A historical average 
-            of deviance of schedule will be used to determine an appropriate range
-            of schedule adherence.  A schedule that occurs within that range will be awarded
-            a score of 0 or above, with less deviance being awarded more points.  Schedules
-            that do not fall within the range of deviance will be awarded negative scores, 
-            with a greater deviance resulting in a lower score all the way to -100 which means
-            the package took twice as long as expected or more.
-            For example, a package that takes more than twice as long to deliver than
-            estimated will receive a score of -100.
             
             \paragraph{SCHEDULE DATA}
             
